--- a/TorchLSTM_Lorenz63.ipynb
+++ b/TorchLSTM_Lorenz63.ipynb
@@ -391,7 +391,7 @@
     "  - The hidden state encapsulates long-term information, while the cell state retains short-term information.\n",
     "\n",
     "<p align=\"center\">\n",
-    "  <img src=\"lstm_cell.png\" alt=\"LSTM cell\" width=\"30%\"/>\n",
+    "  <img src=\"Images/lstm_cell.png\" alt=\"LSTM cell\" width=\"30%\"/>\n",
     "</p>\n",
     "\n",
     "\n"
@@ -406,7 +406,7 @@
     "The network works in an open-loop configuration during training and validation with the output at each time step depending on current and previous inputs within the time window, and the LSTM’s states are reset to zero at the start of each input sequence.\n",
     "\n",
     "<p align=\"center\">\n",
-    "  <img src=\"lstm_open_loop.png\" alt=\"LSTM Open Loop\" width=\"30%\"/>\n",
+    "  <img src=\"Images/lstm_open_loop.png\" alt=\"LSTM Open Loop\" width=\"30%\"/>\n",
     "</p>\n",
     "\n",
     "\n",
@@ -416,7 +416,7 @@
     "time window, the network can make long-term predictions in closed loop mode, even if no data is available, and the states of the LSTM are retained across time steps. The network predicts the next time step, and the prediction is used as an input for the next time step, which allows the autonomous evolution of the LSTM.\n",
     "\n",
     "<p align=\"center\">\n",
-    "  <img src=\"lstm_closed_loop.png\" alt=\"LSTM Closed Loop\" width=\"30%\"/>\n",
+    "  <img src=\"Images/lstm_closed_loop.png\" alt=\"LSTM Closed Loop\" width=\"30%\"/>\n",
     "</p>\n"
    ]
   },
