uploaded trained LSTM weights

--- a/LSTM_Tutorial_Lorenz63.ipynb
+++ b/LSTM_Tutorial_Lorenz63.ipynb
@@ -904,8 +904,8 @@
    ],
    "source": [
     "# We recommend you load the pretrained weights\n",
-    "tf_lstm.model.load_weights('lstm/30_modelweight_checkpoint')\n",
-    "with open('lstm/trainHistory30', \"rb\") as file_pi:\n",
+    "tf_lstm.model.load_weights('lstm/models/30_modelweight_checkpoint')\n",
+    "with open('lstm/models/trainHistory30', \"rb\") as file_pi:\n",
     "    history = pickle.load(file_pi)\n",
     "\n",
     "\n",
@@ -921,9 +921,9 @@
    "outputs": [],
    "source": [
     "# Save the weights and history\n",
-    "# tf_lstm.model.save_weights('lstm/30_modelweight_checkpoint')\n",
+    "# tf_lstm.model.save_weights('lstm/models/30_modelweight_checkpoint')\n",
     "\n",
-    "# with open('lstm/trainHistory30', 'wb') as file:\n",
+    "# with open('lstm/models/trainHistory30', 'wb') as file:\n",
     "#     pickle.dump(history, file)"
    ]
   },
