added prediction horizon

--- a/LSTM_Tutorial_Lorenz63.ipynb
+++ b/LSTM_Tutorial_Lorenz63.ipynb
@@ -67,6 +67,7 @@
     "tf.autograph.set_verbosity(3)\n",
     "\n",
     "from dynamicalsystems.tools import solve_ode_LEs\n",
+    "from dynamicalsystems.metrics import valid_prediction_time\n",
     "from lstm.lstm import TensorFlowLSTM\n",
     "from lstm.lyapunov_tools import compute_lyapunov_exp_lstm\n",
     "import matplotlib as mpl\n",
@@ -355,7 +356,7 @@
    "source": [
     "tf_lstm = TensorFlowLSTM(hidden_size=30, window_size=window_size, observation_dimension=3)\n",
     "tf_lstm(input)\n",
-    "tf_lstm.model.summary()\n"
+    "tf_lstm.model.summary()"
    ]
   },
   {
@@ -973,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1163,9 +1164,9 @@
      "output_type": "stream",
      "text": [
       "Finished on Transient\n",
-      "Inside closed loop i = 10000, Time: 191.49725437164307\n",
+      "Inside closed loop i = 10000, Time: 259.1277334690094\n",
       "Lyapunov exponents: [ 9.20069416e-01  2.57181214e-03 -1.41280132e+01] \n",
-      "Inside closed loop i = 20000, Time: 194.51182556152344\n",
+      "Inside closed loop i = 20000, Time: 271.0106575489044\n",
       "Lyapunov exponents: [ 8.18034225e-01  1.06390900e-03 -1.40480347e+01] \n",
       "Final Lyapunov exponents: [ 8.31895810e-01 -1.18841080e-03 -1.40564818e+01] \n"
      ]
@@ -1177,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1187,7 @@
        "Text(0.5, 0, '$t_p$')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1207,6 +1208,146 @@
     "plt.ylabel(\"LEs\")\n",
     "plt.xlabel(r\"$t_p$\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_prediction_time = vpt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average prediction horizon in 0.09426049439532978 in Lyapunov time$\n"
+     ]
+    }
+   ],
+   "source": [
+    "N_runs = 4\n",
+    "prediction_horizon = np.zeros(N_runs)\n",
+    "for i in range(N_runs):\n",
+    "    N_start = np.random.randint(len(U_test)-25*N_lyap)\n",
+    "    single_window = np.reshape(U_test[N_start:N_start+window_size, :], newshape=(1, window_size, 3))\n",
+    "    prediction = tf_lstm.closed_loop_prediction(tf.convert_to_tensor(single_window), prediction_length=20*N_lyap)\n",
+    "    prediction_horizon[i] = valid_prediction_time(prediction,  U_test[N_start:, :].T, 0.4)\n",
+    "print(f\"Average prediction horizon in {np.mean(prediction_horizon)} in Lyapunov time$\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([340., 186., 557., 263.])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction_horizon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09426049439532978"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction_horizon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2220, 3)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2220"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "20*N_lyap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
